--- a/Orakul (test).ipynb
+++ b/Orakul (test).ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Program Files (x86)\\Python\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sklearn\n",
     "import pandas as pd\n",
@@ -32,16 +23,17 @@
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
     "from pandas import read_csv\n",
-    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "from sklearn.metrics import classification_report,confusion_matrix\n",
     "from sklearn.cross_validation import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
-    "from sklearn.decomposition import PCA"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "#Подгружаем ненужные библиотеки"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 229,
    "metadata": {
     "collapsed": true
    },
@@ -64,18 +56,19 @@
     "rating_team = []\n",
     "name_team = []\n",
     "win = []\n",
-    "lose = []"
+    "lose = []\n",
+    "#Задаем массивы для хранения инфы"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 222,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def rating():\n",
+    "def rating(): #Парсим таблицу команд и сортируем ее\n",
     "    t = urllib.request.urlopen(\"https://api.opendota.com/api/teams\")\n",
     "    proteams = t.read().decode().split(\",\")\n",
     "    for i in range(0, len(proteams)):\n",
@@ -105,15 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 223,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def parse():\n",
-    "    x = 3504812513\n",
-    "    while x <= 3824589115:\n",
+    "def parse():  #Парсим таблицу матчей и сортируем ее\n",
+    "    l = 0\n",
+    "    x = 3824843352\n",
+    "    while l <= 30:\n",
+    "        l += 1\n",
     "        f = urllib.request.urlopen(\"https://api.opendota.com/api/proMatches?less_than_match_id=\"+str(x))\n",
     "        promatches = f.read().decode().split(\",\")\n",
     "        for i in range(0, len(promatches)):\n",
@@ -144,51 +139,36 @@
     "                    team1_win.append(1)\n",
     "                else:\n",
     "                    team1_win.append(0)\n",
-    "        x+=7634131\n",
+    "            if promatches[i].startswith('[{\"match_id\"') or promatches[i].startswith('{\"match_id\"'):\n",
+    "                match_id.append(promatches[i][12:])\n",
+    "        x = int(match_id[-1])\n",
     "    print(len(team1_id))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 224,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def find():\n",
-    "    for i in range(0,len(team1_id)):\n",
-    "        if team1_id[i] in team_id:   \n",
-    "            b1 =int(team_id.index(str(team1_id[int(i)])))\n",
-    "            r1.append(rating_team[b1])\n",
-    "            w1.append(win[b1])\n",
-    "            l1.append(lose[b1])\n",
-    "        else:\n",
-    "            r1.append(0)\n",
-    "            w1.append(0)\n",
-    "            l1.append(0)\n",
-    "    for i in range(0,len(team2_id)):\n",
-    "        if team2_id[i] in team_id:\n",
-    "            b2 = int(team_id.index(str(team2_id[int(i)])))\n",
-    "            r2.append(rating_team[b2])\n",
-    "            w2.append(win[b2])\n",
-    "            l2.append(lose[b2])\n",
-    "        else:\n",
-    "            r2.append(0)\n",
-    "            w2.append(0)\n",
-    "            l2.append(0)"
+    "def find(a): #Поиск названия команды по ее ID\n",
+    "    b1 =int(team_id.index(a))\n",
+    "    t1 = name_team[b1]\n",
+    "    return t1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 225,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def predict():\n",
-    "    base = pd.DataFrame({\n",
+    "def predict(): \n",
+    "    base = pd.DataFrame({ #Создаем БД с матчами и их исходами\n",
     "'Team1radiant':team1_name,\n",
     "'Team2dire':team2_name,\n",
     "'Radiant':team1_id,\n",
@@ -196,64 +176,75 @@
     "'Bo': series_type,\n",
     "'Win':team1_win,\n",
     "                     })\n",
-    "    X = base.loc[:, ['Radiant', 'Dire','Bo']]\n",
-    "    y = base['Win']\n",
-    "    classifier = tree.DecisionTreeRegressor(max_depth=1000)\n",
+    "    X = base.loc[:, ['Radiant', 'Dire','Bo']] #Задаем в X аргументы матча\n",
+    "    y = base['Win'] #Задаем в Y исходы матчей \n",
+    "    x = 0\n",
+    "    classifier = tree.DecisionTreeRegressor(max_depth=2000) #Создаем дерево регрессии с глубиной 2000 веток\n",
     "    classifier.fit(X, y)\n",
     "    a = input(\"Team1 \")\n",
     "    b = input(\"Team2 \")\n",
-    "    c = input(\"Series \")\n",
-    "    prediction = classifier.predict([[a,b,c]])\n",
-    "    print(prediction)"
+    "    t1 = find(a)\n",
+    "    t2 = find(b)\n",
+    "    print('ser-type',t1,t2)\n",
+    "    while x<=2:\n",
+    "        prediction = classifier.predict([[a,b,x]]) #Исход для 1-й команды\n",
+    "        prediction2 = classifier.predict([[b,a,x]]) #Исход для 2-й команды\n",
+    "        print(x,'     ',prediction,'    ',prediction2) #Показываем результаты в зависимости от типа матча\n",
+    "        x +=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 226,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def start():\n",
+    "def start(): #Запуск парсеров для БД и предикт матча(ПЕРЕД ЗАПУСКОМ ОБНУЛИТЬ МАССИВЫ)P.S. Если API OpenDota не работает обнуляем массивы и запускаем заново\n",
+    "    rating()\n",
     "    parse()\n",
-    "    predict()"
+    "    predict() #После одного запуска start() для предсказывания матча используем predict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Team1 5407995\n",
-      "Team2 5326648\n",
-      "Series 2\n",
-      "[ 1.]\n"
+      "Team1 5027210\n",
+      "Team2 726228\n",
+      "ser-type \"VGJ Thunder\" \"Vici Gaming\"\n",
+      "0       [ 1.]      [ 0.]\n",
+      "1       [ 0.16666667]      [ 0.4]\n",
+      "2       [ 0.]      [ 0.]\n"
      ]
     }
    ],
    "source": [
-    "predict()\n"
+    "predict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4200\n",
-      "Team1 5107795\n",
-      "Team2 3210649\n",
-      "Series 1\n",
-      "[ 1.]\n"
+      "3100\n",
+      "Team1 3214108\n",
+      "Team2 2108395\n",
+      "ser-type \"Team NP\" \"TNC Predator\"\n",
+      "0       [ 0.33333333]      [ 0.]\n",
+      "1       [ 0.33333333]      [ 1.]\n",
+      "2       [ 1.]      [ 0.]\n"
      ]
     }
    ],
@@ -269,7 +260,7 @@
    },
    "outputs": [],
    "source": [
-    "5326648  5407995"
+    "# Разные типы нейросетей: RandomForestClassifier(n_estimators =2000, criterion='entropy'); MLPClassifier(hidden_layer_sizes=(50,50,50,50,50),max_iter=5000);DecisionTreeClassifier(random_state=0);DecisionTreeRegressor(random_state=0)"
    ]
   }
  ],
